# spotify-mcp

./: pyproject.toml  requirements.txt
src/spotify_mcp/: server.py  spotify_api.py  utils.py
