[project]
name = "spotify-mcp"
version = "0.2.0"
description = "MCP spotify project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastapi>=0.104.0",
 "fastmcp>=0.3.0",
 "mcp>=1.0.0",
 "pydantic>=2.5.0",
 "python-dotenv>=1.0.0",
 "spotipy>=2.22.1",
 "uvicorn[standard]>=0.24.0",
]
[[project.authors]]
name = "Varun Srivastava"
email = "varun.neal@berkeley.edu"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv.sources]
spotify-mcp = { workspace = true }

[project.scripts]
spotify-mcp = "spotify_mcp:main"
